# crt-player

./: .dockerignore  .env.integration  .gitignore  CLAUDE.md  calibration.py  chromecast_mgr.py  config.py  main.py  pipeline.py  pyproject.toml  pytest.ini  queue_manager.py  requirements.txt  run.sh  state.json.v1.bak  ui.py
crt/: __main__.py  api.py  bootstrap.py  calibration.py  chromecast_mgr.py  config.py  daemon.py  library_store.py  media_server.py  pipeline.py  player_core.py  queue_manager.py  sync_engine.py  ui.py  youtube_client.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/superpowers/plans/: 2026-04-13-crt-cast-server.md  2026-04-14-crt-margins-and-calibration.md  2026-04-14-integration-tests.md  2026-04-14-playlist-cursor-and-reorder.md  2026-04-21-headless-sync-daemon.md  2026-05-10-flipper-fap.md  2026-05-13-flipper-remote-v2.md
docs/superpowers/specs/: 2026-04-13-crt-cast-server-design.md  2026-04-14-crt-margins-and-calibration-design.md  (+6 more)
flipper_app/: .gitignore  CLAUDE.md  COPYING  README.md  application.fam  crt_remote_app.c
flipper_app/libs/: serial_profile.c  serial_profile.h
tests/: conftest.py  test_api.py  test_bootstrap.py  test_calibration.py  test_chromecast_mgr.py  test_config.py  test_daemon.py  test_integration.py  test_library_store.py  test_media_server.py  test_pipeline.py  test_player_core.py  test_queue_manager.py  test_state_persistence.py  test_state_v2_migration.py  test_sync_engine.py  test_tui_client_data_provider.py  test_ui.py  test_youtube_client.py
tui_client/: data_provider.py  main.py  ui.py
